tests/ui/01-raw-blocked.rs
use azumi::html;

fn main() {
    let _component = html! {
        @{Raw("test")}
    };
}
